# zkpow

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  opam.export
docker-files/: build
dockerfiles/: Dockerfile.build  Dockerfile.build-stage1
docs/: bip-zkpow.mediawiki
lib/cached/: .merlin.bak
lib/crs/: .merlin.SAVE
lib/o1trace/: .merlin.SAVE  o1trace.ml
lib/ppx_coda/: dune  versioned_type.ml
lib/random_oracle/: random_oracle.ml
lib/snark_params/: .merlin.SAVE  dune  scan_state_constants.ml  scan_state_constants_intf.ml  snark_params.ml
lib/zkpow/: data_hash.ml  data_hash_intf.ml  dune  keys.ml  state_body_hash.ml  transition.ml  transition_system.ml  wrap.ml
scripts/: set-switch.sh  setup-opam.sh
src/: config.mlh  main.rs  opam.export
src/app/zkpow/: dune  main.ml
src/lib/base58_check/: .merlin.SAVE  .merlin.bak
src/lib/bignum_bigint/: dune
src/lib/cache_dir/: .merlin.SAVE  .merlin.bak  cache_dir.ml  dune
src/lib/cached/: .merlin.SAVE  cached.ml
src/lib/chunked_pedersen_lib/: dune  pedersen.ml  pedersen.mli
src/lib/coda_digestif/: dune
src/lib/coda_numbers/: .merlin.SAVE  .merlin.bak  coda_numbers.ml  dune
src/lib/codable/: .merlin.SAVE  .merlin.bak
src/lib/crs/: .merlin.bak
src/lib/curve_choice/: curve_choice.ml  dune
src/lib/file_system/: .merlin.SAVE  .merlin.bak
src/lib/hash_prefix_states/: .merlin.SAVE  .merlin.bak
src/lib/hash_prefixes/: .merlin.SAVE  .merlin.bak
src/lib/logger/: .merlin.SAVE  .merlin.bak  impl.ml  impl.mli
src/lib/logproc_lib/: .merlin.SAVE  .merlin.bak
src/lib/o1trace/: .merlin.bak  o1trace.ml
src/lib/outside_pedersen_image/: .merlin.SAVE  .merlin.bak
src/lib/ppx_coda/: versioned_type.ml
src/lib/ppx_util/: .merlin.SAVE  .merlin.bak
src/lib/sha256/: .merlin.SAVE  .merlin.bak  dune  intf.ml  sha256.ml
src/lib/snark_bits/: bits.ml
src/lib/snark_keys/: .merlin.SAVE  .merlin.bak  dune
src/lib/snark_params/: .merlin.bak  dune
src/lib/snarky_field_extensions/: dune
src/lib/zkpow/: blockchain_snark_state.ml.bk  blockchain_snark_state.mli.bk  coda_compile_config.ml  data_hash.ml  data_hash_intf.ml  dune  keys.ml  protocol_state.ml  protocol_state.mli  snark_transition.ml  snark_transition.mli  state_hash.mli.bk  step.ml  transition.ml  transition_system.ml  util.ml
src/lib/zkpow_base/: coda_compile_config.ml  data_hash.ml  data_hash_intf.ml  dune  state_hash.ml  transition_system.ml  util.ml
src/lib/zkpow_state/: dune  (+5 more)
(+18 files in other folders)
