[package]
name = "zkpow"
version = "0.1.0"
authors = ["Tyler Smith <tylersmith.me@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
backtrace = { version = "0.3", optional = true }
byteorder = "*"
subtle = "*"
num_cpus = "*"
crossbeam-utils = "*"
halo = { git = "https://github.com/ebfull/halo" }
hex-literal = "0.2.1"
rand_xorshift = "0.2"
sha2 = "0.8"
uint = "0.8"

[dependencies.rand_core]
version = "0.5"
features = ["std"]


[features]
gadget-traces = ["backtrace"]
