(library
 (name zkpow)
 (public_name zkpow)
 (flags :standard -short-paths -warn-error -6-33-32-58)
 (library_flags -linkall)
 (preprocess (pps ppx_jane ppx_coda ppx_deriving.eq ppx_deriving_yojson))
 (inline_tests)
 (libraries bignum_bigint bitstring_lib bowe_gabizon_hash core curve_choice digestif group_map hash_prefixes logger random_oracle snark_bits snark_params snarky snarky_curves snarky_field_extensions))
