(library
 (name zkpow)
 (public_name zkpow)
 (flags :standard -short-paths -warn-error -6-33-32-58)
 (library_flags -linkall)
 (preprocess (pps ppx_base ppx_coda ppx_deriving.eq ppx_deriving_yojson ppx_jane ppx_optcomp ppx_snarky))
 (inline_tests)
 (libraries bignum_bigint bitstring_lib cache_dir cached core
 hash_prefix_states hex logger random_oracle sexp_diff_kernel snark_bits snark_params snarky_universe storage zkpow_base zkpow_state))
